--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,7 @@
 @use 'documentCreation';
 @use '../components/Button/Button.scss';
 @use '../components/Input/Input.scss';
+@use './UserProfilePage.scss';
+@use './CustomPromt.scss';
+@use './documentPage.scss';
+@use './shareModal.scss';
