--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -49,7 +49,7 @@ body {
                     justify-content: end;
                     align-items: center;
                     position: fixed;
-                    z-index: 3;
+                    z-index: 3 !important;;
                     top: 0;
                     left: 0;
                     opacity: 0.8;
