--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -321,7 +321,7 @@ body #root div .grid-container .navbar {
   justify-content: end;
   align-items: center;
   position: fixed;
-  z-index: 3;
+  z-index: 3 !important;
   top: 0;
   left: 0;
   opacity: 0.8;
@@ -895,25 +895,6 @@ input.valid {
 #profile .avatar-block span {
   white-space: nowrap;
 }
-#profile .main-content {
-  box-shadow: 0 0 clamp(0.46875rem, 0.3492647059rem + 0.4901960784vw, 0.9375rem) var(--color-orange);
-  border-radius: clamp(0.53125rem, 0.1887254902rem + 1.4052287582vw, 1.875rem);
-  opacity: 0.9;
-  margin-top: 4rem;
-  width: clamp(22.31875rem, 8.093627451rem + 58.3594771242vw, 78.125rem);
-  height: clamp(13.3875rem, 4.8514705882rem + 35.0196078431vw, 46.875rem);
-  background-color: var(--color-dark-blue);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-@media (width <= 48.06125rem) {
-  #profile .main-content {
-    position: absolute;
-    top: 0;
-    margin-top: clamp(4.6875rem, 3.4926470588rem + 4.9019607843vw, 9.375rem);
-  }
-}
 #profile .main-content .tabs {
   gap: clamp(0.53125rem, 0.1887254902rem + 1.4052287582vw, 1.875rem);
   display: flex;
@@ -963,40 +944,18 @@ input.valid {
   position: relative;
   top: clamp(-1.875rem, -2.3529411765rem + 1.9607843137vw, 0rem);
 }
-#profile .main-content .tab-content .documents-tab {
-  gap: clamp(0.625rem, -0.5220588235rem + 4.7058823529vw, 5.125rem);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 #profile .main-content .tab-content .documents-tab__docs {
-  width: 100%;
-  display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 @media (width <= 48.06125rem) {
   #profile .main-content .tab-content .documents-tab__docs {
     justify-content: space-around;
   }
 }
-#profile .main-content .tab-content .documents-tab__docs-item {
-  width: clamp(5.34375rem, 3.0129901961rem + 9.5620915033vw, 14.4875rem);
-  height: clamp(7.5875rem, 4.2960784314rem + 13.5032679739vw, 20.5rem);
-  background-color: azure;
-  border: clamp(0.09375rem, 0.0698529412rem + 0.0980392157vw, 0.1875rem) solid var(--color-grey);
-  transition: transform 0.2s ease-in-out, border 0.2s ease-in-out;
-}
 @media (width <= 48.06125rem) {
   #profile .main-content .tab-content .documents-tab__docs-item:last-of-type {
     display: none;
   }
-}
-#profile .main-content .tab-content .documents-tab__docs-item:hover {
-  transform: scale(1.1);
-  border: clamp(0.125rem, 0.0931372549rem + 0.1307189542vw, 0.25rem) solid var(--color-auqa);
-  cursor: pointer;
 }
 #profile .main-content .tab-content .documents-tab__show-more {
   display: flex;
@@ -1037,6 +996,236 @@ input.valid {
   transform: translate(0, 0);
 }
 
+#savedDocs {
+  width: 90%;
+  height: 90%;
+  max-height: 60.75rem;
+  max-width: 108rem;
+}
+#savedDocs .documents-tab {
+  overflow: hidden;
+}
+#savedDocs .documents-tab__docs {
+  flex-grow: 1;
+  overflow-y: auto;
+  gap: clamp(0.9375rem, 0.6985294118rem + 0.9803921569vw, 1.875rem);
+  padding: clamp(1.875rem, 1.3970588235rem + 1.9607843137vw, 3.75rem);
+  margin-right: clamp(0.9375rem, 0.6985294118rem + 0.9803921569vw, 1.875rem); /* Смещаем скроллбар влево */
+  /* Кастомизация скроллбара (для WebKit браузеров) */
+}
+#savedDocs .documents-tab__docs::-webkit-scrollbar {
+  width: clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem); /* Можно сделать немного шире */
+}
+#savedDocs .documents-tab__docs::-webkit-scrollbar-thumb {
+  background: var(--color-grey);
+  border-radius: clamp(0.125rem, 0.0931372549rem + 0.1307189542vw, 0.25rem);
+}
+#savedDocs .documents-tab__docs::-webkit-scrollbar-track {
+  background: var(--color-light-2);
+  border-radius: clamp(0.125rem, 0.0931372549rem + 0.1307189542vw, 0.25rem);
+}
+#savedDocs .documents-tab__scroll-bar {
+  display: none; /* скрываем кастомный скроллбар, если используем нативный */
+}
+
+.main-content {
+  box-shadow: 0 0 clamp(0.46875rem, 0.3492647059rem + 0.4901960784vw, 0.9375rem) var(--color-orange);
+  border-radius: clamp(0.53125rem, 0.1887254902rem + 1.4052287582vw, 1.875rem);
+  opacity: 0.9;
+  margin-top: 4rem;
+  width: clamp(22.31875rem, 8.093627451rem + 58.3594771242vw, 78.125rem);
+  height: clamp(13.3875rem, 4.8514705882rem + 35.0196078431vw, 46.875rem);
+  background-color: var(--color-dark-blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+@media (width <= 48.06125rem) {
+  .main-content {
+    position: absolute;
+    top: 0;
+    margin-top: clamp(4.6875rem, 3.4926470588rem + 4.9019607843vw, 9.375rem);
+  }
+}
+.main-content__header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.main-content__header .back-button {
+  width: clamp(2.5rem, 1.862745098rem + 2.614379085vw, 5rem);
+  height: clamp(2.5rem, 1.862745098rem + 2.614379085vw, 5rem);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  position: relative;
+}
+.main-content__header .back-button::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: clamp(0.75rem, 0.5588235294rem + 0.7843137255vw, 1.5rem);
+  height: clamp(0.75rem, 0.5588235294rem + 0.7843137255vw, 1.5rem);
+  border-left: clamp(0.125rem, 0.0931372549rem + 0.1307189542vw, 0.25rem) solid white;
+  border-bottom: clamp(0.125rem, 0.0931372549rem + 0.1307189542vw, 0.25rem) solid white;
+  transform: translate(-25%, -50%) rotate(45deg);
+}
+.main-content__header .back-button:hover {
+  opacity: 0.8;
+}
+.main-content__header .back-button:active {
+  opacity: 0.6;
+}
+.main-content__header h4 {
+  font-weight: 100;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+}
+
+.documents-tab {
+  position: relative;
+  gap: clamp(0.625rem, -0.5220588235rem + 4.7058823529vw, 5.125rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.documents-tab__docs {
+  justify-content: start;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+@media (width <= 48.06125rem) {
+  .documents-tab__docs {
+    justify-content: space-around;
+  }
+}
+.documents-tab__docs-item {
+  position: relative;
+  overflow: hidden;
+  width: clamp(5.34375rem, 3.0129901961rem + 9.5620915033vw, 14.4875rem);
+  height: clamp(7.5875rem, 4.2960784314rem + 13.5032679739vw, 20.5rem);
+  background-color: white;
+  border: clamp(0.09375rem, 0.0698529412rem + 0.0980392157vw, 0.1875rem) solid var(--color-grey);
+  transition: transform 0.2s ease-in-out, border 0.2s ease-in-out;
+}
+.documents-tab__docs-item:hover {
+  transform: scale(1.1);
+  border: clamp(0.125rem, 0.0931372549rem + 0.1307189542vw, 0.25rem) solid var(--color-auqa);
+  cursor: pointer;
+}
+
+.document-modal {
+  position: fixed;
+  margin-top: 4rem;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* Кнопки управления */
+  /* Выпадающее меню */
+}
+.document-modal__backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem));
+}
+.document-modal__content {
+  position: relative;
+  z-index: 1001 !important;
+  background: white;
+  border: clamp(0.09375rem, 0.0698529412rem + 0.0980392157vw, 0.1875rem) solid var(--color-auqa);
+  border-radius: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem);
+  width: clamp(19.396875rem, 14.4525735294rem + 20.2843137255vw, 38.79375rem);
+  height: clamp(27.4375rem, 20.443627451rem + 28.6928104575vw, 54.875rem);
+  overflow: auto;
+  box-shadow: 0 clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem) clamp(0.9375rem, 0.7781862745rem + 0.6535947712vw, 1.5625rem) rgba(0, 0, 0, 0.2);
+}
+.document-modal__document {
+  width: 100%;
+  height: 100%;
+  border: clamp(0.0625rem, 0.0465686275rem + 0.0653594771vw, 0.125rem) solid var(--color-grey);
+  background-color: white;
+}
+.document-modal__controls {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem);
+}
+.document-modal__kebab, .document-modal__close {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: fluid-text(24, 12);
+  color: var(--color-dark);
+  transition: transform 0.2s ease-in-out;
+}
+.document-modal__kebab:hover, .document-modal__close:hover {
+  transform: scale(1.1);
+  color: var(--color-auqa);
+}
+.document-modal__menu {
+  position: absolute;
+  top: clamp(1.125rem, 0.8382352941rem + 1.1764705882vw, 2.25rem);
+  left: clamp(0.5rem, 0.3884803922rem + 0.4575163399vw, 0.9375rem);
+  background: white;
+  border: 1px solid var(--color-grey);
+  border-radius: clamp(0.25rem, 0.1862745098rem + 0.2614379085vw, 0.5rem);
+  box-shadow: 0 clamp(0.125rem, 0.0931372549rem + 0.1307189542vw, 0.25rem) clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem) rgba(0, 0, 0, 0.15);
+  z-index: 1002;
+}
+.document-modal__menu button {
+  text-indent: clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem);
+  padding: clamp(0.125rem, 0.0931372549rem + 0.1307189542vw, 0.25rem) clamp(0.1875rem, 0.1397058824rem + 0.1960784314vw, 0.375rem);
+  width: 100%;
+  text-align: left;
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: clamp(0.75rem, 0.6862745098rem + 0.2614379085vw, 1rem);
+  color: var(--color-dark);
+  transition: all 0.2s ease-in-out;
+}
+.document-modal__menu button:hover {
+  background: var(--color-light-grey);
+  color: var(--color-auqa);
+}
+.document-modal__menu button:not(:last-child) {
+  border-bottom: 1px solid var(--color-grey);
+}
+.document-modal__menu button:last-child {
+  color: #ff4d4f;
+}
+
+/* Адаптация для мобильных */
+@media (width <= 48.06125rem) {
+  .document-modal {
+    padding: clamp(0.625rem, 0.4656862745rem + 0.6535947712vw, 1.25rem);
+  }
+  .document-modal__content {
+    padding: clamp(0.625rem, 0.4656862745rem + 0.6535947712vw, 1.25rem);
+    width: 95%;
+  }
+  .document-modal__controls {
+    top: clamp(0.5rem, 0.4681372549rem + 0.1307189542vw, 0.625rem);
+    width: calc(100% - clamp(1.25rem, 0.931372549rem + 1.3071895425vw, 2.5rem));
+  }
+}
 .prompt-overlay {
   position: fixed;
   top: 0;
