--- a/src/styles/documentCreation.scss
+++ b/src/styles/documentCreation.scss
@@ -49,11 +49,12 @@
         height: fluid(775, 387.5);
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
     }
 
     &__doc-data {
+        height: fluid(400, 200);
         @include flex-center(false, true);
         .select-wrapper {
             position: relative;
